# Yadro-cpp-test-1

./: .gitmodules  CMakeLists.txt  README.md  config.json  ex_input.txt  ex_output.txt
include/: delay_settings.hpp  file_tape_handler.hpp  i_tape_handler.hpp  tape.hpp  tape_iterator.hpp  tape_sorter.hpp  tape_sorting_app.hpp
src/: delay_settings.cpp  main.cpp  tape_sorting_app.cpp
test/: CMakeLists.txt  test.cpp  test_gen.py
test/answers/: ans_1.txt  ans_10.txt  ans_11.txt  ans_12.txt  ans_13.txt  ans_14.txt  ans_15.txt  ans_2.txt  ans_3.txt  ans_4.txt  ans_5.txt  ans_6.txt  ans_7.txt  ans_8.txt  ans_9.txt
test/tests/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
